# decision_tree_classifier_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
benchmarks/: benchmark_main.cpp
include/: criteria.hpp  metrics.hpp  parser.hpp  split.hpp  tree.hpp  types.hpp
performance/results/: after_entropy.txt  after_gini.txt  before_entropy.txt  before_gini.txt
performance/scripts/: run_after.sh  run_before.sh
src/: criteria.cpp  metrics.cpp  parser.cpp  split.cpp  tree.cpp
tests/: test_main.cpp
